// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be default state 1`] = `
Object {
  "environment": "",
  "flags": Object {},
  "headerBackground": undefined,
  "links": Array [
    Object {
      "href": "https://docs.getunleash.io/docs?source=oss",
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "title": "User documentation",
      "value": "Documentation",
    },
    Object {
      "href": "https://github.com/Unleash",
      "icon": "c_github",
      "title": "Source code on GitHub",
      "value": "GitHub",
    },
  ],
  "name": "Unleash",
  "slogan": "The enterprise ready feature toggle service.",
  "version": "3.x",
}
`;

exports[`should be merged state all 1`] = `
Object {
  "environment": "dev",
  "flags": Object {},
  "headerBackground": "red",
  "links": Array [
    Object {
      "href": "https://docs.getunleash.io/docs?source=oss",
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "title": "User documentation",
      "value": "Documentation",
    },
    Object {
      "href": "https://github.com/Unleash",
      "icon": "c_github",
      "title": "Source code on GitHub",
      "value": "GitHub",
    },
  ],
  "name": "Unleash",
  "slogan": "hello",
  "version": "3.x",
}
`;

exports[`should only update headerBackground 1`] = `
Object {
  "environment": "",
  "flags": Object {},
  "headerBackground": "black",
  "links": Array [
    Object {
      "href": "https://docs.getunleash.io/docs?source=oss",
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "title": "User documentation",
      "value": "Documentation",
    },
    Object {
      "href": "https://github.com/Unleash",
      "icon": "c_github",
      "title": "Source code on GitHub",
      "value": "GitHub",
    },
  ],
  "name": "Unleash",
  "slogan": "The enterprise ready feature toggle service.",
  "version": "3.x",
}
`;
